--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         src="img/tucao.png" width="24px" /></a>
             </div>
             <a class="dev" target="_blank" href="dev/index.html">开发者中心</a>
-           
+
         </div>
     </header>
     <nav>
@@ -53,7 +53,8 @@
                     稳定，不断前行，将梦实现。<br />
                     高效，简单快速，不失敏捷。</p>
                 <a class="btn gray" target="_blank" href="https://support.qq.com/products/369540/faqs/109350">使用说明</a>
-                <a class="btn blue" target="_blank" href="https://626f-bot-fbd250-1251049348.tcb.qcloud.la/lgodown/LGO.zip">立即下载</a>
+                <a class="btn blue" target="_blank"
+                    href="https://626f-bot-fbd250-1251049348.tcb.qcloud.la/lgodown/LGO.zip">立即下载</a>
             </div>
 
             <div class="col">
@@ -130,7 +131,8 @@
 
         <h3 id="contact">捐赠</h3>
         <section class="box white-box ">
-            <p> ♥ 通过<a href="https://dun.mianbaoduo.com/@chizi" target="_blank" class="link">捐赠</a>支持，能够帮助我们负担服务器及开发费用，并维持社区及软件的独立、纯净、零广告。</p>
+            <p> ♥ 通过<a href="https://dun.mianbaoduo.com/@chizi" target="_blank"
+                    class="link">捐赠</a>支持，能够帮助我们负担服务器及开发费用，并维持社区及软件的独立、纯净、零广告。</p>
             <a class="btn blue" target="_blank" href="https://dun.mianbaoduo.com/@chizi">请我吃饭</a>
             <a class="btn gray" target="_blank" href="https://support.qq.com/products/369540/">问题反馈</a>
         </section>
@@ -138,9 +140,9 @@
     </main>
 
     <footer class="grid">
-        Copyright ©2020-2021  LGO机器人 LGO.ME  | <a href="tos.html" target="_blank" class="link"> 使用协议 </a>
+        Copyright ©2020-2021 LGO机器人 LGO.ME | <a href="tos.html" target="_blank" class="link"> 使用协议 </a>
     </footer>
-    <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
+    <script src="jquery.min.js"></script>
     <script src="home.js"></script>
 </body>
 
