--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     高效，简单快速，不失敏捷。</p>
                 <a class="btn gray" target="_blank" href="https://support.qq.com/products/369540/faqs/109350">使用说明</a>
                 <a class="btn blue" target="_blank"
-                    href="https://626f-bot-fbd250-1251049348.tcb.qcloud.la/lgodown/LGO.zip">立即下载</a>
+                    href="https://626f-bot-3goazorse436ab04-1251049348.tcb.qcloud.la/bot/lgo/_LGO%E6%9C%BA%E5%99%A8%E4%BA%BA.zip?sign=07e9dd659f7dd5ce1a843d6a84bb2b48&t=1714119964">立即下载</a>
             </div>
 
             <div class="col">
