--- a/dev/index.html
+++ b/dev/index.html
@@ -25,17 +25,17 @@
                 <a target="_blank" title="意见反馈" href="https://support.qq.com/product/369540"><img border="0"
                         src="../img/tucao.png" width="24px" /></a>
             </div>
-            <a class="dev"  href="#">登陆</a>
+            <a class="dev"  href="http://botdoc.ichizi.com/">文档</a>
         </div>
     </header>
     <main role="main" class="grid">
-        <section class="box white-box hero" id="about">
+<!--         <section class="box white-box hero" id="about">
             <img src="../img/logo.png" title="LGO机器人 - 免费·稳定·高效" class="thumb" />
             <div>
                 插件数：N | 用户数：N | 累计收益：N
             </div>
             
-        </section>
+        </section> -->
 
         <h3 id="goal">开发者中心正在建设中</h3>
         <section class="box red-box skills-box">
@@ -43,12 +43,13 @@
             开发者中心正在建设中，请耐心等待。<br/>
             如有开发相关问题请加群反馈：469362743
             </p>
-            <a class="btn gray" target="_blank" href="doc/index.html">开发文档</a>
+            <a class="btn gray" target="_blank" href="http://botdoc.ichizi.com/">开发文档</a>
+            <a class="btn gray" target="_blank" href="https://qm.qq.com/q/2HTbB1HrLq">一键加群</a>
         </section>
     </main>
 
     <footer class="grid">
-        Copyright ©2020-2021 LGO机器人 LGO.ME
+        Copyright ©2020-2024 LGO机器人 LGO.ME
     </footer>
     <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
     <script src="../home.js"></script>
